# Fallout76MarketplaceBlacklistSearch

./: .gitignore  .spaceignore  README.md  Spacefile  main.py  pyproject.toml  requirements.txt
.deta/: prog_info  state
.github/workflows/: deploy-to-deta.yml
static/css/: style.css
templates/: index.html
